--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,21 @@
-html,
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+html {
+    height: -webkit-fill-available;
+}
+
 body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+    height: 100vh;
+    height: inherit;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+
+#__next {
+    height: inherit;
 }
 
-* {
-  box-sizing: border-box;
+.container {
+    @apply mx-auto
 }
